# big_data_small_term-big2

./: CMakeLists.txt  README.en.md  README.md  csp测试数据库.md  实验2、3答辩.drawio  数据科学实验.doc  数据科学实验1.doc  数据科学实验1.md
Include/: PublicIncludes.h
Include/Info/: AttributeInfo.h  InfoObject.h  StudentInfo.h  TableInfo.h
Include/db/: Block.h  BlockManager.h  BlockReader.h  BlockWriter.h  Item.h  PageHeaderData.h  Reader.h  SizeCalculator.h  Special.h  TableManager.h  TupleData.h  TupleDataComparable.h  Writer.h  database.h
Include/dbms/: Dbms.h  FilePtrManager.h  FilterExpression.h
Include/exceptions/: errors.h
Include/tools/: Checker.h  Comparator.h  Sorter.h  utils.h
Source/: main.cpp
Source/db/: Block.cpp  BlockManager.cpp  BlockReader.cpp  BlockWriter.cpp  Item.cpp  PageHeaderData.cpp  Reader.cpp  SizeCalculator.cpp  Special.cpp  TableManager.cpp  TupleData.cpp  TupleDataComparable.cpp  Writer.cpp
Source/dbms/: Dbms.cpp  FilterExpression.cpp
Source/exceptions/: errors.cpp
Source/info/: AttributeInfo.cpp  InfoObject.cpp  StudentInfo.cpp  TableInfo.cpp
Source/tools/: Checker.cpp  Comparator.cpp  Sorter.cpp  utils.cpp
作业1/: 数据科学实验1.doc  数据科学实验1.md
作业2/: 实验2.docx  实验2.md
作业2/demo1/: main.cpp
作业2/demo1/db_folder/: 1001  1002  1003
作业2/demo2/: Makefile  database.cpp  heads.h  main.cpp  tables.cpp  utils.h
作业4/: main.cpp  实验4.docx
